# codex-rehome

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/release-notes/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  codex-state-research.md  compatibility-matrix.md  compatibility.md  migration-model.md  threat-model.md
scripts/: disposable-e2e.sh  install.sh  package-release.sh
src/: backup.rs  cli.rs  discovery.rs  fault.rs  main.rs  path_map.rs  plan.rs  rollback.rs  verify.rs
src/adapters/: desktop_state.rs  mod.rs  rollout.rs  state_db.rs
tests/: cli.rs
tests/fixtures/codex-0.144.2/: README.md  schema.sql
