[package]
name = "codex-rehome"
version = "0.1.0-alpha.1"
edition = "2024"
license = "Apache-2.0"
description = "Safely inspect, plan, remap, move, verify, and roll back local Codex workspaces"
repository = "https://github.com/FIERsity/codex-rehome"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
hex = "0.4"
rusqlite = { version = "0.38", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
unicode-normalization = "0.1"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
